[metadata]
name = color-pandas
version = 0.0.1
author = Gianfrancesco Angelini
author_email = gian.angelini@hotmail.com
description = Pandas plugin to make easy styling of cells
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gianfa/color_pandas.git
project_urls =
    Bug Tracker = https://github.com/gianfa/color_pandas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.6


[options.packages.find]
where = src